Add JWT Authetication + Authorization, Setup Spring Security 6, Refactor Data Seeder classes